Fixed issue with role herarchy, and updated code to better support symfony 3.0

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -53,6 +53,9 @@ kmjtoolkit:
                 # Desc: Phone Number
                 label: 'Phone Number'   
 
+            email:
+                # Desc: Email address
+                label: 'Email address'
     document:
         form:
             file:
